# Numerical_Analysis

./: README.md  pyproject.toml
code/: 3.py  4.py  5.py  8.py
report/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py
report/data/: 5_data.csv
